test/files/neg/t515.check
t515.scala:7: error: type mismatch;
 found   : String
 required: Test.Truc
  val parent: Truc = file.getMachin
                          ^
one error found
